# SisyphusGameEngine

./: .gitattributes  .gitignore  .gitmodules  GameEngine.sln  README.md  pre-build.bat
GameEngine/: CMakeLists.txt  ErrorLogger.cpp  GameEngine.vcxproj  GameEngine.vcxproj.filters  HistoryManager.h  Matrix4x4.h  PBR_Spheres.json  PBR_scene.json  ParticleScene.json  Physx.json  baseParticles.ps  cpp.hint  imgui.ini  myScene.json  newScene.json  save_file_output.xml  scene.json  test.json  test_scene.json
GameEngine/Engine/: GameEngine.cpp
GameEngine/Engine/Components/: CameraComponent.h  ColliderComponent.cpp  ColliderComponent.h  Components.h  DataComponent.h  EditorBillboardComponent.h  FAudioEngine.cpp  FAudioEngine.h  FAudioImp.cpp  FAudioImp.h  FSoundComponent.cpp  FSoundComponent.h  GameComponent.h  GameObject.cpp  GameObject.h  GameObjectComp.h  ImageBasedLightingComponent.h  LightComponent.cpp  LightComponent.h  Material.h  Mesh.cpp  Mesh.h  MeshComponent.cpp  MeshComponent.h  Model.h  Particle.h  ParticleComponent.cpp  ParticleComponent.h  RBodyComponent.cpp  RBodyComponent.h  ResourceBase.h  SkyboxComponent.h  SkyboxResource.h  Texture.h  TransformComponent.cpp  TransformComponent.h
GameEngine/Engine/Contexts/: EngineContext.h  HardwareContext.h  PhysicsContext.h  RenderContext.h
GameEngine/Engine/Core/: DisplayWin32.cpp  DisplayWin32.h  EngineCore.cpp  EngineCore.h  EventBase.h  IService.h  ResourcePath.h  ServiceLocator.h  WinInput.cpp  WinInput.h
GameEngine/Engine/Event/: IEvent.h
GameEngine/Engine/Events/: SyAnimatorComponentAdded.h  SyEditorCameraMoveToTarget.h  SyHotReloadEvent.h  SyImageBasedLightingUpdateEvent.h  SyOnCreateRBodyEvent.h  SyPlayModeEndedEvent.h  SyPlayModeStartedEvent.h  SySceneLoadEvent.h  SySoundDeletedEvent.h
GameEngine/Engine/Mono/: ISyMonoGameCallbackReceiver.h  SyMono.cpp  SyMono.h  SyMonoGame.cpp  SyMonoGame.h  SyMonoGameConfig.cpp  SyMonoGameConfig.h  SyMonoMethod.h  SyMonoObj.cpp  SyMonoObj.h  SyMonoProxyComps.h  SyMonoProxyDatas.h  SyMonoRuntime.cpp  SyMonoRuntime.h
GameEngine/Engine/Obsolete/: RenderPipeline.cpp  RenderPipeline.h
GameEngine/Engine/Scene/: CameraHelper.cpp  CameraHelper.h  GameObjectHelper.cpp  GameObjectHelper.h  Prefab.h  Scene.h
GameEngine/Engine/Serialization/: Serializable.h  SerializableMacros.h  SerializableOuters.h  SerializableTraits.h  Serializer.hpp
GameEngine/Engine/Systems/: CollisionPreSystem.cpp  CollisionPreSystem.h  CollisionSystem.cpp  CollisionSystem.h  EditorBillboardSystem.cpp  EditorBillboardSystem.h  EditorCameraSystem.cpp  EditorCameraSystem.h  EngineContext.h  ErrorLoggingSystem.cpp  ErrorLoggingSystem.h  HardwareContext.h  HardwareInitSystem.cpp  HardwareInitSystem.h  ISystem.h  InputSystem.cpp  InputSystem.h  LightSystem.cpp  LightSystem.h  MaterialUpdateSystem.cpp  MaterialUpdateSystem.h  MeshLoader.cpp  MeshLoader.h  MeshSystem.h  (+29 more)
GameEngine/info/: EL_README.txt  EVENT_SYSTEM_README.txt  RESOURCE_SYSTEM_README.txt
(+620 files in other folders)
